# jupytext-notebook-helper

./: .gitignore  .pre-commit-config.yaml  README.md  cliff.toml  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml
jupytext_notebook_helper/: __init__.py  filter.py  inlining.py  run.py  tp.mk  tpmk.py  uvutils.py
tests/: test_filter.py  test_helpers.py  test_inlining.py  test_run.py
